drupal/sites/all/themes/eenterprise/sass/styles.scss
/* ... */
.embed-responsive {
    position: relative;
    display: block;
    height: 0;
    padding: 0;
    overflow: hidden;
}

.embed-responsive .embed-responsive-item,
.embed-responsive iframe,
.embed-responsive embed,
.embed-responsive object,
.embed-responsive video {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border: 0;
}

.embed-responsive.embed-responsive-16by9 {
    padding-bottom: 56.25%;
}

.embed-responsive.embed-responsive-4by3 {
    padding-bottom: 75%;
}

.page-workbench,
.page-user,
.page-app-connect {
    .main-content {
        background-color: $color-gray-white;
    }
}

.page-workbench {
    .main-content {
        padding-top: 1rem;
        padding-bottom: 1rem;
    }
    .grid-stack-item[data-gs-x="1"] {
        margin-left: 0.5rem;
    }
    .panel-pane {
        background-color: $color-white;
        padding: 10px 30px;
        margin-top: 10px;
        border: 1px solid #ededed;
        border-radius: 4px;
        -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
    }
    .ui-dialog {
        max-width: 95%;
        margin-left: 2%;
        margin-right: 2%;
        &.locations-modal {
            overflow-y: hidden;
        }
        .panel-pane {
            -webkit-box-shadow: none;
            box-shadow: none;
            border: none;
            padding: 0 30px;
            margin-bottom: 0;
        }
    }
    .pager,
    .dataTables_paginate,
    .views-exposed-form label {
        font-weight: normal;
    }
}

.page-app-connect {
    .pager,
    .dataTables_paginate,
    .views-exposed-form label {
        font-weight: normal;
    }
}

// Hide dialogs on first load -------------- //

.page-workbench {
    .ui-dialog,
    div[role="dialog"]:not(.fsrFloatingContainer) {
        display: none;
    }
    .locations-modal.ui-dialog {
        max-width: 80%;
        .ui-dialog-buttonpane {
            .ui-dialog-buttonset {
                padding-left: 100px;
            }
        }
    }
}

// E-Enterprise Buttons -------------- //
.block--login-from-guest-page {
    float: right;
    margin-top: 20px;
    .usa-button {
        margin-right: 0;
    }
    a#faqs-link {
        font-size: $h6-font-size;
        margin-right: 20px;
    }
}

.field-add-more-submit {
    background-color: $color-green;
    vertical-align: middle;
    margin: 0px;
    &:hover {
        background-color: $color-green-dark;
    }
}

.add_more_holder {
    .field-add-more-submit {
        width: auto;
    }
}

@media screen and (min-width: 48em) and (max-width: 56.875em) {
    .ui-tabs .ui-tabs-nav li {
        margin-right: 0;
        padding-left: 0;
        padding-right: 0;
        &:hover {
            border-radius: inherit;
        }
        a.ui-tabs-anchor {
            padding-left: 0.5em;
            padding-right: 0.5em;
        }
    }
    .ui-tabs .ui-tabs-nav li,
    .todo-filter-by-week li {
        padding-left: 0.5em;
        padding-right: 0.5em;
    }
}

.section-bridge-landing .ee-workbench-header-setlocation {
    display: none;
}

.tabs, .tabs-primary__tab, .tabs-primary__tab.is-active {
    border: none;
    background-image: none;
}

.view-to-do .views-exposed-form .views-widget-filter-field_todo_lst_due_value {
    display: none !important;
}

.view-to-do .views-exposed-form .views-widget-filter-field_todo_lst_part_code_value {
    display: block;
}

.pane-content {
    .view-to-do,
    .view-progress-tracker {
        select {
            padding-right: 2.5rem;
            background-position: right 0.75rem center;
        }
        .views-exposed-form .views-exposed-widget {
            padding-right: 10px;
        }
    }
}

@media screen and (min-width: 40.001em) {

    header {
        table-layout: fixed;
        display: table;
        width: 100%;
        > div {
            display: table-cell;
        }
        .site-name-and-slogan {
            width: 40%;
        }
        .region-header {
            text-align: right;
            vertical-align: middle;
            width: 60%;
        }
        a:last-of-type {
            margin-right: 0;
        }

    }

    .org-select-grouping, .role-select-grouping {
        div {
            margin-bottom: 10px;
        }
    }
    #new-location {
        width: 55%;
        #new-location-input {
            width: 72.5%;
            display: inline-block;
            float: none;
        }
        .usa-button {
            display: inline-block;
            float: none;
            margin-left: 10px;
        }
    }
    #choose-city-holder {
        .usa-button {
            margin-left: 10px;
        }
    }
    #zip_container {
        span {
            float: left;
            margin-right: 30px;
        }
        #nearest-location {
            font-weight: bold;
        }
    }
    #location-add-new {
        span, button {
            display: block;
            float: left;
        }
    }
}

// Workbench -------------- //

@media screen and (min-width: 45em) {

    th.views-field {
        padding-top: 5px;
        padding-bottom: 5px;
    }

    .views-field-field-todo-lst-item,
    .views-field-field-todo-lst-domain,
    .views-field-field-prog-tracker-app,
    .views-field-field-prog-track-domain,
    .be-well-results-first-column{
        display: block;
    }

    td.views-field-field-todo-lst-item,
    td.views-field-field-todo-lst-domain,
    td.views-field-field-prog-tracker-app,
    td.views-field-field-prog-track-domain,
    td.be-well-results-first-column{
        text-align: left;
    }

    .views-field-field-todo-lst-item a.simple-dialog {
        margin-top: 0
    }

    .page-workbench .block-views.odd,
    .section-workbench .block-views.odd {
        width: 55%;
    }
    .page-workbench .block-views.even,
    .section-workbench .block-views.even {
        width: 40%;
    }

    .ee-workbench-top-header li {
        min-width: 4.5em;
    }

}
/* ... */

